fix:result page element spacing

--- a/styles/components/layout/Navbar.module.css
+++ b/styles/components/layout/Navbar.module.css
@@ -67,7 +67,9 @@
     bottom: 0px;
     z-index: 999;
     flex-direction: row;
-    justify-content: center;    
+    justify-content: center;   
+    
+    background-image: radial-gradient(#1b1b1b 10%, #181818 45%);
   }
 
   .logo {
